makin some changes for the moment to try things

--- a/example/Pipfile
+++ b/example/Pipfile
@@ -16,10 +16,10 @@ django = ">=2.0"
 djangorestframework = "*"
 "dj-database-url" = "*"
 "psycopg2" = "*"
-entity = {git = "ssh://git@github.com/The-Politico/politico-civic-entity", editable = true}
-geography = {git = "ssh://git@github.com/The-Politico/politico-civic-geography", editable = true}
-government = {git = "ssh://git@github.com/The-Politico/politico-civic-government", editable = true}
-election = {git = "ssh://git@github.com/The-Politico/politico-civic-election", editable = true}
+politico-civic-entity = "*"
+politico-civic-geography = "*"
+politico-civic-government = "*"
+politico-civic-election = "*"
 biography = {path = "./..", editable = true}
 
 
